src/test/deca/context/valid/127_ProtectedFieldClass.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	1
// 
// Historique:
//    cree le 01/01/2022

class A {
	protected int x = 1;
}
class B extends A {
	int f() {
		A a = new A();
		// Doit etre refuse.
		return a.x;
	}
}
{
	B b = new B();
	int x = b.f();
	println(x);
}
