src/test/deca/context/invalid/26_VoidField.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 12: ContextualError: field void
// 
// Historique:
//    cree le 01/01/2022

class A {
	// Doit etre refuse.
	void x;
}
